No Bug - Import translations from https://github.com/mozilla-l10n/android-l10n CLOSED TREE
UltraBlame original commit: 0c8b1c6d6bb3ce37c1a7957e8144694ac1edf14f

--- a/mobile/android/fenix/app/src/main/res/values-be/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-be/strings.xml
@@ -4289,6 +4289,77 @@ string
 !
 -
 -
+Label
+text
+within
+the
+set
+as
+default
+banner
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_default_banner_subtitle_2
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+the
+button
+that
+dismisses
+the
+set
+as
+default
+banner
+in
+the
+menu
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_default_banner_dismiss_promotion
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Content
 description
 (
@@ -6440,6 +6511,34 @@ string
 Terms
 of
 service
+sub
+header
+label
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_terms_of_service_sub_header_2
+"
+>
+\
+u00a0
+<
+/
+string
+>
+<
+!
+-
+-
+Terms
+of
+service
 onboarding
 page
 continue
@@ -6457,6 +6556,59 @@ name
 onboarding_term_of_service_agree_and_continue_button_label_2
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Line
+one
+of
+the
+terms
+of
+service
+onboarding
+page
+.
+%
+1
+s
+is
+replaced
+by
+an
+active
+link
+using
+onboarding_term_of_service_line_one_link_text_2
+as
+text
+(
+Firefox
+Terms
+of
+Use
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_term_of_service_line_one_2
+"
+>
+%
+1
+s
+.
 <
 /
 string
@@ -6557,6 +6709,165 @@ string
 !
 -
 -
+Terms
+of
+use
+(
+ToU
+)
+second
+subheader
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_redesign_tou_subheader_two
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Used
+as
+text
+for
+the
+link
+in
+onboarding_redesign_tou_body_one
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_redesign_tou_body_one_link_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Terms
+of
+use
+(
+ToU
+)
+second
+body
+text
+.
+'
+Firefox
+'
+is
+intentionally
+hardcoded
+.
+%
+1
+s
+is
+replaced
+by
+an
+active
+link
+using
+onboarding_redesign_tou_body_two_link_text
+as
+text
+(
+Privacy
+Notice
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_redesign_tou_body_two
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Firefox
+.
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Used
+as
+text
+for
+the
+link
+in
+onboarding_redesign_tou_body_two
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_redesign_tou_body_two_link_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Used
 as
 text
@@ -6608,6 +6919,72 @@ name
 onboarding_redesign_tou_agree_and_continue_button_label
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+label
+for
+'
+Continue
+'
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_redesign_continue_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Marketing
+onboarding
+page
+title
+.
+'
+Firefox
+'
+is
+intentionally
+hardcoded
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_marketing_redesign_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Firefox
 <
 /
 string
@@ -10496,6 +10873,28 @@ string
 -
 Preference
 for
+downloads
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_downloads
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
 enabling
 gecko
 engine
@@ -10711,6 +11110,237 @@ name
 addons_permissions_allow_for_all_sites
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+data
+collection
+permissions
+listed
+in
+the
+addon
+'
+s
+permissions
+screen
+.
+%
+1
+s
+is
+a
+formatted
+list
+of
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_required_data_collection_description_2
+"
+>
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+"
+none
+"
+data
+collection
+permission
+when
+the
+extension
+doesn
+'
+t
+collect
+anything
+according
+to
+the
+developer
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_none_required_data_collection_description
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+required
+permissions
+section
+from
+addon
+'
+s
+permissions
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_heading_required_permissions
+"
+>
+:
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+optional
+permissions
+section
+from
+addon
+'
+s
+permissions
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_heading_optional_permissions
+"
+>
+:
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+required
+data
+collection
+permissions
+section
+from
+addon
+'
+s
+permissions
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_heading_required_data_collection
+"
+>
+:
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+optional
+data
+collection
+permissions
+section
+from
+addon
+'
+s
+permissions
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_heading_optional_data_collection
+"
+>
+:
 <
 /
 string
@@ -10980,6 +11610,35 @@ name
 =
 "
 customize_toggle_recently_visited
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+customize
+home
+screen
+section
+with
+Pocket
+.
+-
+-
+>
+<
+string
+name
+=
+"
+customize_toggle_pocket_3
 "
 >
 <
@@ -11994,6 +12653,229 @@ Title
 for
 the
 "
+Sunset
+"
+gradient
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+has
+a
+rich
+red
+-
+to
+-
+purple
+gradient
+background
+resembling
+the
+tones
+of
+a
+sunset
+sky
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_gradient_sunset
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Blue
+Hour
+"
+gradient
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+has
+a
+cool
+blue
+gradient
+background
+resembling
+the
+sky
+color
+around
+the
+time
+just
+after
+sunset
+or
+before
+sunrise
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_gradient_blue_hour
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Twilight
+"
+gradient
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+has
+a
+purple
+-
+toned
+gradient
+background
+resembling
+the
+sky
+color
+during
+twilight
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_gradient_twilight
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Midnight
+"
+gradient
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+features
+a
+dark
+gradient
+background
+resembling
+the
+deep
+tones
+of
+the
+night
+sky
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_gradient_midnight
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
 Northern
 Lights
 "
@@ -12216,6 +13098,57 @@ Title
 for
 the
 "
+Minimal
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+presents
+a
+simplified
+flat
+and
+monochrome
+version
+of
+the
+Firefox
+logo
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_minimal
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
 Pride
 "
 themed
@@ -12254,6 +13187,353 @@ name
 =
 "
 alternative_app_icon_option_pride
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Cute
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+features
+a
+playful
+design
+with
+an
+adorable
+aesthetic
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_cute
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+144
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Momo
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+was
+created
+by
+artist
+heyheymomodraws
+and
+features
+a
+unique
+hand
+-
+drawn
+style
+with
+a
+friendly
+fox
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_momo
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Subtitle
+for
+the
+"
+Momo
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+was
+created
+by
+artist
+heyheymomodraws
+and
+features
+a
+unique
+hand
+-
+drawn
+style
+with
+a
+friendly
+fox
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_momo_subtitle
+"
+>
+heyheymomodraws
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Cuddling
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+features
+a
+playful
+design
+with
+an
+adorable
+aesthetic
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_cuddling
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Flaming
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+features
+a
+fiery
+design
+with
+the
+Firefox
+logo
+surrounded
+by
+flames
+for
+a
+bold
+energetic
+look
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_flaming
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+"
+Cool
+"
+themed
+alternative
+app
+icon
+variant
+in
+the
+icon
+picker
+screen
+.
+The
+app
+icon
+uses
+a
+warm
+orange
+-
+to
+-
+yellow
+gradient
+background
+with
+a
+sleek
+modern
+twist
+on
+the
+Firefox
+logo
+giving
+it
+a
+fresh
+and
+stylish
+appearance
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_option_cool
 "
 >
 <
@@ -12567,6 +13847,43 @@ UnusedResources
 100
 Firefox
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+of
+the
+Nimbus
+message
+for
+extensions
+general
+availability
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addon_ga_message_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
 <
 /
 string
@@ -13664,6 +14981,59 @@ string
 !
 -
 -
+Preference
+switch
+for
+daily
+usage
+ping
+data
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_daily_usage_ping_title
+"
+>
+<
+/
+string
+>
+<
+string
+name
+=
+"
+preferences_daily_usage_ping_description
+"
+>
+Mozilla
+.
+<
+/
+string
+>
+<
+string
+name
+=
+"
+preferences_daily_usage_ping_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 studies
@@ -13748,6 +15118,32 @@ removedIn
 =
 "
 145
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Header
+of
+the
+Sign
+in
+preference
+view
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_sign_in
 "
 >
 <
@@ -15196,6 +16592,40 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Close
+tab
+button
+-
+-
+>
+<
+string
+name
+=
+"
+tab_manager_close_tabs
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Opening
 screen
 Title
@@ -16308,6 +17738,103 @@ name
 =
 "
 tab_tray_multiselect_menu_item_close
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Closes
+selected
+tabs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tab_manager_multiselect_menu_item_close_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+multiselect
+menu
+for
+sharing
+selected
+tabs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tab_manager_multiselect_menu_item_share
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+multiselect
+menu
+for
+adding
+selected
+tabs
+to
+collections
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tab_manager_multiselect_menu_item_add_to_collection
 "
 >
 <
@@ -17516,6 +19043,101 @@ string
 !
 -
 -
+Title
+for
+the
+dialog
+that
+is
+shown
+when
+there
+is
+not
+enough
+storage
+space
+to
+download
+a
+file
+.
+-
+-
+>
+<
+string
+name
+=
+"
+download_file_has_not_enough_storage_dialog_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+confirm
+button
+in
+the
+dialog
+that
+is
+shown
+when
+there
+is
+not
+enough
+storage
+space
+to
+download
+a
+file
+.
+This
+button
+will
+navigate
+the
+user
+to
+the
+device
+'
+s
+storage
+management
+settings
+.
+-
+-
+>
+<
+string
+name
+=
+"
+download_file_has_not_enough_storage_dialog_confirm_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -17585,6 +19207,35 @@ name
 =
 "
 download_delete_item
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+toolbar
+"
+Navigate
+back
+"
+button
+-
+-
+>
+<
+string
+name
+=
+"
+download_navigate_back_description
 "
 >
 <
@@ -18338,6 +19989,52 @@ string
 -
 -
 The
+label
+/
+title
+of
+a
+field
+in
+the
+Web
+Compat
+Reporter
+feature
+for
+explaining
+a
+high
+-
+level
+reason
+why
+the
+site
+is
+broken
+.
+-
+-
+>
+<
+string
+name
+=
+"
+webcompat_reporter_label_whats_broken_2
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+The
 error
 message
 of
@@ -18903,125 +20600,6 @@ string
 !
 -
 -
-Bookmarks
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
-the
-selected
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_folder_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
-multiple
-items
-including
-folders
-.
-%
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
-.
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_multiple_folders_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-%
-s
-.
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -19462,44 +21040,6 @@ string
 -
 -
 Bookmark
-overflow
-menu
-save
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_menu_save_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 multi
 select
 title
@@ -19575,44 +21115,6 @@ name
 =
 "
 edit_bookmark_folder_fragment_title
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-sign
-in
-button
-message
--
--
->
-<
-string
-name
-=
-"
-bookmark_sign_in_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
 "
 >
 <
@@ -19728,44 +21230,6 @@ string
 -
 -
 Bookmark
-add
-folder
-screen
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_add_folder_fragment_label
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 select
 folder
 screen
@@ -19779,44 +21243,6 @@ name
 =
 "
 bookmark_select_folder_fragment_label
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-editing
-error
-missing
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_empty_title_error
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
 "
 >
 <
@@ -19846,46 +21272,6 @@ bookmark_invalid_url_error
 "
 >
 URL
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-screen
-message
-for
-empty
-bookmarks
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmarks_empty_message
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -19929,91 +21315,6 @@ bookmark_deletion_snackbar_message
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-not
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -20080,47 +21381,6 @@ bookmark_delete_single_item
 >
 %
 s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-search
-all
-bookmarks
--
--
->
-<
-string
-name
-=
-"
-bookmark_search
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -20235,6 +21495,37 @@ name
 =
 "
 bookmark_search_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+"
+close
+"
+button
+in
+bookmarks
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_close_button_content_description
 "
 >
 <
@@ -22832,6 +24123,35 @@ An
 option
 from
 the
+three
+dot
+menu
+to
+sign
+in
+-
+-
+>
+<
+string
+name
+=
+"
+sync_menu_sign_in
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+An
+option
+from
+the
 share
 dialog
 to
@@ -23745,48 +25065,6 @@ in
 snackbar
 when
 user
-deletes
-a
-collection
--
--
->
-<
-string
-name
-=
-"
-snackbar_collection_deleted
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-snackbar
-when
-user
 closes
 a
 tab
@@ -24279,49 +25557,6 @@ tab_collection_dialog_message
 1
 s
 ?
-<
-/
-string
->
-<
-!
--
--
-Tab
-collection
-deletion
-prompt
-dialog
-option
-to
-delete
-the
-collection
--
--
->
-<
-string
-name
-=
-"
-tab_collection_dialog_positive
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -26743,6 +27978,35 @@ string
 !
 -
 -
+Preference
+for
+enhanced
+tracking
+protection
+for
+the
+custom
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_custom_known_fingerprinters
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Button
 label
 for
@@ -27503,6 +28767,34 @@ etp_redirect_trackers_description
 >
 -
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+fingerprinting
+protection
+for
+the
+custom
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+etp_suspected_fingerprinters_title
+"
+>
 <
 /
 string
@@ -32910,43 +34202,6 @@ string
 !
 -
 -
-Bookmark
-deletion
-confirmation
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_confirmation
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -35193,46 +36448,6 @@ name
 =
 "
 action_bar_up_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-privacy
-content
-close
-button
--
--
->
-<
-string
-name
-=
-"
-privacy_content_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
 "
 >
 <
@@ -39242,6 +40457,87 @@ string
 !
 -
 -
+Button
+text
+on
+the
+clear
+site
+data
+dialog
+to
+allow
+users
+to
+confirm
+they
+wish
+to
+clear
+the
+site
+data
+.
+-
+-
+>
+<
+string
+name
+=
+"
+clear_site_data_dialog_positive_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+clear
+site
+data
+dialog
+to
+allow
+users
+to
+cancel
+the
+action
+and
+not
+clear
+the
+site
+data
+.
+-
+-
+>
+<
+string
+name
+=
+"
+clear_site_data_dialog_negative_button_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Debug
 drawer
 The
@@ -40789,6 +42085,117 @@ System
 Component
 -
 -
+>
+<
+!
+-
+-
+Terms
+of
+use
+link
+in
+the
+pop
+up
+prompt
+message
+that
+links
+to
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_link_terms_of_use
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+notice
+link
+in
+the
+pop
+up
+prompt
+message
+that
+links
+to
+the
+privacy
+notice
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_link_privacy_notice
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Learn
+more
+link
+in
+the
+pop
+up
+prompt
+message
+that
+links
+to
+a
+site
+with
+more
+information
+about
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_link_learn_more
+"
+>
+<
+/
+string
 >
 <
 !
