--- a/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
@@ -5461,59 +5461,6 @@ string
 name
 =
 "
-browser_menu_default_banner_subtitle
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Trv
-to
-n
-kolik
-sekund
-.
-Zm
-nit
-m
-ete
-kdykoliv
-.
-<
-/
-string
->
-<
-!
--
--
-Label
-text
-within
-the
-set
-as
-default
-banner
--
--
->
-<
-string
-name
-=
-"
 browser_menu_default_banner_subtitle_2
 "
 >
@@ -7871,8 +7818,7 @@ n
 soukrom
 a
 blokuje
-sledov
-n
+sledovac
 prvky
 str
 nek
@@ -10136,86 +10082,6 @@ e
 v
 ce
 lidem
-.
-<
-/
-string
->
-<
-!
--
--
-Marketing
-onboarding
-page
-opt
--
-in
-checkbox
-.
-'
-Mozilla
-'
-is
-intentionally
-hardcoded
-.
--
--
->
-<
-string
-name
-=
-"
-onboarding_marketing_opt_in_checkbox
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sd
-let
-minim
-ln
-mno
-stv
-dat
-s
-partnery
-Mozilly
-v
-oblasti
-marketingov
-ch
-technologi
-.
-Tato
-data
-nejsou
-nikdy
-prod
-v
-na
-ani
-pou
-v
-na
-k
-zobrazov
-n
-reklam
 .
 <
 /
@@ -28184,120 +28050,6 @@ example
 Firefox
 "
 )
-.
--
--
->
-<
-string
-name
-=
-"
-webcompat_reporter_description_2
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Va
-e
-hl
-en
-n
-m
-pom
-e
-porozum
-t
-chyb
-m
-v
-aplikaci
-%
-1
-s
-a
-opravit
-je
-tak
-aby
-byl
-pro
-v
-echny
-co
-nejlep
-.
-Zjistit
-v
-ce
-<
-/
-string
->
-<
-!
--
--
-The
-description
-of
-the
-Web
-Compat
-Reporter
-feature
-which
-has
-a
-"
-learn
-more
-"
-button
-text
-for
-navigating
-to
-a
-SUMO
-link
-to
-learn
-more
-about
-reporting
-a
-broken
-site
-.
-%
-1
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
 and
 %
 2
@@ -30228,61 +29980,6 @@ user
 wants
 to
 delete
-the
-selected
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_folder_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Opravdu
-chcete
-smazat
-tuto
-slo
-ku
-?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
 multiple
 items
 .
@@ -30304,80 +30001,6 @@ vybran
 polo
 ky
 ?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
-multiple
-items
-including
-folders
-.
-%
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
-.
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_multiple_folders_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-%
-s
-sma
-e
-vybran
-polo
-ky
-.
 <
 /
 string
@@ -30959,46 +30582,6 @@ string
 !
 -
 -
-Bookmark
-overflow
-menu
-save
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_menu_save_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Ulo
-it
-<
-/
-string
->
-<
-!
--
--
 Accessibility
 label
 for
@@ -31333,56 +30916,6 @@ string
 -
 -
 Bookmark
-sign
-in
-button
-message
--
--
->
-<
-string
-name
-=
-"
-bookmark_sign_in_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Pro
-zobrazen
-synchronizovan
-ch
-z
-lo
-ek
-se
-pros
-m
-p
-ihlaste
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 URL
 editing
 field
@@ -31527,48 +31060,6 @@ string
 -
 -
 Bookmark
-add
-folder
-screen
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_add_folder_fragment_label
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-P
-idat
-slo
-ku
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 select
 folder
 screen
@@ -31599,52 +31090,6 @@ Bookmark
 editing
 error
 missing
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_empty_title_error
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Z
-lo
-ka
-mus
-m
-t
-n
-zev
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-editing
-error
-missing
 or
 improper
 URL
@@ -31662,52 +31107,6 @@ bookmark_invalid_url_error
 Neplatn
 URL
 adresa
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-screen
-message
-for
-empty
-bookmarks
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmarks_empty_message
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Nem
-te
-dn
-z
-lo
-ky
 <
 /
 string
@@ -31757,102 +31156,6 @@ na
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-not
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Z
-lo
-ky
-smaz
-ny
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Maz
-n
-vybran
-ch
-slo
-ek
 <
 /
 string
@@ -31969,51 +31272,6 @@ ky
 :
 %
 s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-search
-all
-bookmarks
--
--
->
-<
-string
-name
-=
-"
-bookmark_search
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Zadejte
-hledan
-v
-razy
 <
 /
 string
@@ -36931,52 +36189,6 @@ in
 snackbar
 when
 user
-deletes
-a
-collection
--
--
->
-<
-string
-name
-=
-"
-snackbar_collection_deleted
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Sb
-rka
-odstran
-na
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-snackbar
-when
-user
 closes
 a
 tab
@@ -37641,50 +36853,6 @@ rku
 1
 s
 ?
-<
-/
-string
->
-<
-!
--
--
-Tab
-collection
-deletion
-prompt
-dialog
-option
-to
-delete
-the
-collection
--
--
->
-<
-string
-name
-=
-"
-tab_collection_dialog_positive
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Odstranit
 <
 /
 string
@@ -50566,50 +49734,6 @@ string
 !
 -
 -
-Bookmark
-deletion
-confirmation
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_confirmation
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Opravdu
-chcete
-tuto
-z
-lo
-ku
-smazat
-?
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -53330,48 +52454,6 @@ P
 ej
 t
 nahoru
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-privacy
-content
-close
-button
--
--
->
-<
-string
-name
-=
-"
-privacy_content_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Zav
-t
 <
 /
 string
@@ -65248,56 +64330,6 @@ setup_checklist_task_explore_extensions
 Prozkoumat
 roz
 en
-<
-/
-string
->
-<
-!
--
--
-The
-title
-of
-the
-search
-widget
-task
-for
-the
-setup
-checklist
--
--
->
-<
-string
-name
-=
-"
-setup_checklist_task_search_widget
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Instalace
-widgetu
-pro
-vyhled
-v
-n
 <
 /
 string
