No Bug - Import translations from https://github.com/mozilla-l10n/android-l10n CLOSED TREE
UltraBlame original commit: aa6247c92d0d088e69634ff50f57fab06960ab07

--- a/mobile/android/fenix/app/src/main/res/values-es-rES/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-es-rES/strings.xml
@@ -1439,6 +1439,78 @@ string
 !
 -
 -
+Description
+of
+private
+browsing
+mode
+displayed
+to
+users
+on
+the
+homepage
+when
+they
+enable
+private
+mode
+.
+%
+1
+s
+is
+the
+name
+of
+the
+app
+(
+for
+example
+"
+Firefox
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+felt_privacy_info_card_subtitle_3
+"
+>
+%
+1
+s
+elimina
+tus
+cookies
+historial
+y
+datos
+del
+sitio
+cuando
+cierras
+todas
+tus
+pesta
+as
+privadas
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Clickable
 portion
 of
@@ -5267,58 +5339,6 @@ Establecer
 s
 como
 predeterminado
-<
-/
-string
->
-<
-!
--
--
-Label
-text
-within
-the
-set
-as
-default
-banner
--
--
->
-<
-string
-name
-=
-"
-browser_menu_default_banner_subtitle
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Bastan
-unos
-segundos
-.
-Se
-puede
-cambiar
-en
-cualquier
-momento
-.
 <
 /
 string
@@ -9853,8 +9873,24 @@ onboarding
 page
 opt
 -
-in
+out
 checkbox
+.
+Unchecking
+the
+box
+does
+not
+increase
+data
+collection
+.
+Our
+data
+practices
+remain
+the
+same
 .
 '
 Mozilla
@@ -9871,27 +9907,11 @@ string
 name
 =
 "
-onboarding_marketing_opt_in_checkbox
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
+onboarding_marketing_opt_out_checkbox
 "
 >
 Comparte
 datos
-m
-nimos
 con
 los
 socios
@@ -12011,6 +12031,73 @@ la
 navegaci
 n
 privada
+<
+/
+string
+>
+<
+!
+-
+-
+Informs
+the
+user
+how
+to
+access
+the
+tabs
+when
+"
+Use
+screen
+lock
+to
+hide
+tabs
+in
+private
+browsing
+"
+is
+enabled
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_pbm_lock_screen_summary_3
+"
+>
+Visualiza
+las
+pesta
+as
+con
+desbloqueo
+mediante
+huella
+dactilar
+PIN
+o
+facial
+.
+Activar
+esta
+opci
+n
+tambi
+n
+impide
+capturar
+y
+compartir
+la
+pantalla
+.
 <
 /
 string
@@ -18439,6 +18526,106 @@ string
 !
 -
 -
+Message
+to
+warn
+users
+that
+applying
+an
+alternative
+app
+icon
+may
+require
+an
+app
+restart
+.
+Whether
+or
+not
+the
+app
+closes
+depends
+on
+what
+version
+of
+Android
+it
+is
+so
+we
+use
+the
+word
+"
+may
+"
+instead
+of
+"
+will
+"
+.
+%
+1
+s
+is
+replaced
+by
+the
+brand
+name
+(
+e
+.
+g
+.
+Firefox
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+restart_warning_dialog_body_2
+"
+>
+La
+aplicaci
+n
+podr
+a
+cerrarse
+.
+Simplemente
+toca
+el
+nuevo
+icono
+para
+volver
+a
+abrir
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Dialog
 button
 text
@@ -23301,6 +23488,71 @@ string
 !
 -
 -
+Sessions
+Title
+for
+the
+list
+of
+tabs
+in
+the
+current
+normal
+session
+used
+by
+a11y
+services
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+normal
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_header_normal_tabs_counter_title
+"
+>
+Pesta
+as
+normales
+abiertas
+:
+%
+1
+s
+.
+Toca
+para
+cambiar
+de
+pesta
+a
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 the
@@ -23475,6 +23727,33 @@ tabs_header_normal_tabs_title
 >
 Pesta
 as
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+tabs
+header
+synced
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_header_synced_tabs_title
+"
+>
+Sincronizadas
 <
 /
 string
@@ -24267,6 +24546,71 @@ P
 gina
 de
 inicio
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+text
+displayed
+for
+a
+homepage
+tab
+in
+the
+tabs
+tray
+.
+%
+s
+is
+a
+placeholder
+that
+will
+be
+replaced
+by
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tab_tray_homepage_tab_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+145
+"
+>
+P
+gina
+de
+inicio
+de
+%
+s
 <
 /
 string
@@ -27976,6 +28320,140 @@ string
 !
 -
 -
+Label
+of
+the
+checkbox
+on
+the
+Report
+broken
+site
+screen
+for
+sending
+URLS
+blocked
+by
+Enhanced
+Tracking
+Protection
+.
+-
+-
+>
+<
+string
+name
+=
+"
+webcompat_reporter_etp_checkbox_text
+"
+>
+Enviar
+URLs
+bloqueadas
+por
+la
+protecci
+n
+contra
+el
+rastreo
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+text
+for
+the
+checkbox
+on
+the
+Report
+broken
+site
+screen
+for
+sending
+URLS
+blocked
+by
+Enhanced
+Tracking
+Protection
+.
+It
+informs
+the
+user
+when
+checked
+the
+report
+will
+include
+the
+list
+of
+URLs
+that
+were
+blocked
+by
+Enhanced
+Tracking
+Protection
+on
+the
+current
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+webcompat_reporter_etp_checkbox_description
+"
+>
+La
+protecci
+n
+mejorada
+contra
+el
+rastreo
+puede
+bloquear
+rastreadores
+y
+scripts
+que
+algunos
+sitios
+web
+necesitan
+para
+funcionar
+correctamente
+.
+<
+/
+string
+>
+<
+!
+-
+-
 These
 reason
 strings
@@ -29006,61 +29484,6 @@ user
 wants
 to
 delete
-the
-selected
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_folder_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Seguro
-que
-quieres
-eliminar
-esta
-carpeta
-?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
 multiple
 items
 .
@@ -29083,81 +29506,6 @@ los
 items
 seleccionados
 ?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
-multiple
-items
-including
-folders
-.
-%
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
-.
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_multiple_folders_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-%
-s
-va
-a
-eliminar
-los
-elementos
-seleccionados
-.
 <
 /
 string
@@ -29734,45 +30082,6 @@ string
 !
 -
 -
-Bookmark
-overflow
-menu
-save
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_menu_save_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Guardar
-<
-/
-string
->
-<
-!
--
--
 Accessibility
 label
 for
@@ -30098,52 +30407,6 @@ string
 -
 -
 Bookmark
-sign
-in
-button
-message
--
--
->
-<
-string
-name
-=
-"
-bookmark_sign_in_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Iniciar
-sesi
-n
-para
-ver
-los
-marcadores
-sincronizados
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 URL
 editing
 field
@@ -30284,46 +30547,6 @@ string
 -
 -
 Bookmark
-add
-folder
-screen
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_add_folder_fragment_label
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Agregar
-carpeta
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 select
 folder
 screen
@@ -30341,49 +30564,6 @@ bookmark_select_folder_fragment_label
 >
 Seleccionar
 carpeta
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-editing
-error
-missing
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_empty_title_error
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Debe
-tener
-un
-t
-tulo
 <
 /
 string
@@ -30414,50 +30594,6 @@ URL
 no
 v
 lida
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-screen
-message
-for
-empty
-bookmarks
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmarks_empty_message
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-No
-hay
-marcadores
-aqu
 <
 /
 string
@@ -30503,96 +30639,6 @@ elimin
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-not
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Marcadores
-eliminados
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Eliminar
-carpetas
-seleccionadas
 <
 /
 string
@@ -30702,53 +30748,6 @@ eliminados
 :
 %
 s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-search
-all
-bookmarks
--
--
->
-<
-string
-name
-=
-"
-bookmark_search
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Introducir
-t
-rminos
-de
-b
-squeda
 <
 /
 string
@@ -35513,51 +35512,6 @@ in
 snackbar
 when
 user
-deletes
-a
-collection
--
--
->
-<
-string
-name
-=
-"
-snackbar_collection_deleted
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Colecci
-n
-eliminada
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-snackbar
-when
-user
 closes
 a
 tab
@@ -36212,50 +36166,6 @@ eliminar
 1
 s
 ?
-<
-/
-string
->
-<
-!
--
--
-Tab
-collection
-deletion
-prompt
-dialog
-option
-to
-delete
-the
-collection
--
--
->
-<
-string
-name
-=
-"
-tab_collection_dialog_positive
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Eliminar
 <
 /
 string
@@ -38712,6 +38622,155 @@ string
 !
 -
 -
+Preference
+description
+for
+the
+checkbox
+setting
+for
+"
+baseline
+"
+exceptions
+(
+a
+set
+of
+content
+blocking
+exceptions
+applied
+to
+fix
+major
+website
+breakage
+)
+.
+%
+1
+s
+is
+the
+name
+of
+the
+application
+(
+e
+.
+g
+.
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_allow_list_baseline
+"
+>
+Permitir
+que
+%
+1
+s
+aplique
+autom
+ticamente
+las
+excepciones
+requeridas
+para
+evitar
+problemas
+importantes
+del
+sitio
+web
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+description
+for
+the
+checkbox
+setting
+for
+"
+convenience
+"
+exceptions
+(
+a
+set
+of
+content
+blocking
+exceptions
+applied
+to
+fix
+convenience
+site
+features
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_allow_list_convenience
+"
+>
+Tambi
+n
+aplicar
+excepciones
+autom
+ticamente
+que
+solo
+sean
+necesarias
+para
+solucionar
+problemas
+menores
+y
+hacer
+que
+est
+n
+disponibles
+funciones
+tiles
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Dialog
 that
 appears
@@ -38768,6 +38827,97 @@ desactivar
 las
 correcciones
 ?
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+for
+the
+dialog
+that
+appears
+after
+disabling
+the
+baseline
+exceptions
+preference
+under
+Strict
+or
+Custom
+tracking
+protection
+.
+%
+1
+s
+is
+the
+name
+of
+the
+application
+(
+e
+.
+g
+.
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_allow_list_dialog_message
+"
+>
+Esta
+configuraci
+n
+ayuda
+a
+solucionar
+los
+problemas
+m
+s
+comunes
+del
+sitio
+.
+Si
+la
+desactiva
+es
+posible
+que
+algunos
+sitios
+no
+funcionen
+y
+%
+1
+s
+no
+podr
+ayudar
+a
+solucionar
+esos
+problemas
+.
 <
 /
 string
@@ -44865,6 +45015,64 @@ string
 !
 -
 -
+Button
+for
+unlocking
+logins
+on
+the
+biometric
+lock
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+logins_biometric_unlock_button
+"
+>
+Desbloquear
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+for
+leaving
+logins
+on
+the
+biometric
+lock
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+logins_biometric_leave_button
+"
+>
+Salir
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 of
 warning
@@ -48649,49 +48857,6 @@ string
 !
 -
 -
-Bookmark
-deletion
-confirmation
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_confirmation
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Seguro
-que
-quieres
-eliminar
-este
-marcador
-?
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -51435,47 +51600,6 @@ action_bar_up_description
 >
 Ir
 arriba
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-privacy
-content
-close
-button
--
--
->
-<
-string
-name
-=
-"
-privacy_content_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Cerrar
 <
 /
 string
@@ -57279,6 +57403,94 @@ string
 !
 -
 -
+Description
+text
+for
+the
+Enhanced
+Tracking
+Protection
+toggle
+when
+tracking
+protection
+is
+enabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+protection_panel_etp_toggle_enabled_description_2
+"
+>
+Si
+algo
+parece
+que
+no
+funciona
+en
+este
+sitio
+intenta
+desactivarla
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+text
+for
+the
+Enhanced
+Tracking
+Protection
+toggle
+when
+tracking
+protection
+is
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+protection_panel_etp_toggle_disabled_description_2
+"
+>
+Se
+recomienda
+activar
+la
+protecci
+n
+contra
+el
+rastreo
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 displaying
@@ -57392,6 +57604,42 @@ no
 est
 n
 bloqueados
+<
+/
+string
+>
+<
+!
+-
+-
+Link
+text
+to
+navigate
+to
+privacy
+and
+security
+settings
+from
+the
+protection
+panel
+.
+-
+-
+>
+<
+string
+name
+=
+"
+protection_panel_privacy_and_security_settings_2
+"
+>
+Ajustes
+de
+privacidad
 <
 /
 string
@@ -60163,6 +60411,126 @@ string
 -
 Debug
 drawer
+credit
+cards
+The
+title
+of
+the
+credit
+cards
+feature
+in
+the
+Debug
+Drawer
+.
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_credit_cards_title
+"
+>
+Tarjetas
+de
+cr
+dito
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+button
+in
+the
+debug
+drawer
+for
+adding
+a
+new
+credit
+card
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_add_new_credit_card
+"
+>
+A
+adir
+nueva
+tarjeta
+de
+cr
+dito
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+button
+for
+deleting
+in
+the
+debug
+drawer
+all
+addresses
+.
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_delete_all_credit_cards
+"
+>
+Eliminar
+todas
+las
+tarjetas
+de
+cr
+dito
+<
+/
+string
+>
+<
+!
+-
+-
+Debug
+drawer
 "
 contextual
 feature
@@ -60579,6 +60947,80 @@ origen
 de
 forma
 permanente
+<
+/
+string
+>
+<
+!
+-
+-
+Add
+-
+ons
+debug
+tools
+The
+description
+of
+the
+Add
+-
+ons
+Tools
+in
+the
+Debug
+Drawer
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_addons_tools_title
+"
+>
+Herramientas
+de
+complementos
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+button
+used
+to
+check
+for
+add
+-
+on
+updates
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addons_debug_tools_check_for_updates_button
+"
+>
+Buscar
+actualizaciones
 <
 /
 string
@@ -62901,24 +63343,10 @@ string
 name
 =
 "
-setup_checklist_task_search_widget
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
+setup_checklist_task_search_widget_2
 "
 >
-Instalar
+Explorar
 el
 widget
 de
@@ -63918,6 +64346,391 @@ review_prompt_feedback_button
 Enviar
 opini
 n
+<
+/
+string
+>
+<
+!
+-
+-
+Terms
+of
+use
+pop
+up
+prompt
+Title
+for
+the
+pop
+up
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_title
+"
+>
+Tenemos
+una
+actualizaci
+n
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+for
+the
+terms
+of
+use
+pop
+up
+prompt
+%
+1
+s
+is
+the
+product
+name
+"
+Firefox
+"
+%
+2
+s
+is
+the
+string
+terms_of_use_prompt_link_terms_of_use
+(
+Terms
+of
+Use
+)
+that
+is
+a
+link
+to
+the
+terms
+of
+use
+%
+3
+s
+is
+the
+string
+terms_of_use_prompt_link_privacy_notice
+(
+Privacy
+Notice
+)
+that
+is
+a
+link
+to
+the
+privacy
+notice
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_message_1
+"
+>
+Hemos
+introducido
+%
+2
+s
+de
+%
+1
+s
+y
+actualizado
+nuestra
+%
+3
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Second
+part
+of
+the
+terms
+of
+use
+pop
+up
+prompt
+%
+1
+s
+is
+the
+string
+terms_of_use_prompt_link_learn_more
+(
+Learn
+more
+)
+that
+is
+a
+link
+to
+a
+website
+with
+more
+information
+about
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_message_2
+"
+>
+Por
+favor
+t
+mate
+un
+momento
+para
+revisar
+y
+aceptar
+.
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Terms
+of
+use
+link
+in
+the
+pop
+up
+prompt
+message
+that
+links
+to
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_link_terms_of_use
+"
+>
+T
+rminos
+de
+uso
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+notice
+link
+in
+the
+pop
+up
+prompt
+message
+that
+links
+to
+the
+privacy
+notice
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_link_privacy_notice
+"
+>
+Aviso
+de
+privacidad
+<
+/
+string
+>
+<
+!
+-
+-
+Learn
+more
+link
+in
+the
+pop
+up
+prompt
+message
+that
+links
+to
+a
+site
+with
+more
+information
+about
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_link_learn_more
+"
+>
+Saber
+m
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+button
+to
+accept
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_accept
+"
+>
+Aceptar
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+button
+to
+postpone
+accepting
+the
+terms
+of
+use
+-
+-
+>
+<
+string
+name
+=
+"
+terms_of_use_prompt_postpone
+"
+>
+Record
+rmelo
+m
+s
+tarde
 <
 /
 string
