--- a/mobile/android/fenix/app/src/main/res/values-ml/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-ml/strings.xml
@@ -4628,49 +4628,6 @@ string
 name
 =
 "
-browser_menu_default_banner_subtitle
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-.
-<
-/
-string
->
-<
-!
--
--
-Label
-text
-within
-the
-set
-as
-default
-banner
--
--
->
-<
-string
-name
-=
-"
 browser_menu_default_banner_subtitle_2
 "
 >
@@ -16250,6 +16207,32 @@ string
 !
 -
 -
+Header
+of
+the
+Sign
+in
+preference
+view
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_sign_in
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Preference
 for
 reconnecting
@@ -22093,93 +22076,6 @@ string
 -
 -
 The
-description
-of
-the
-Web
-Compat
-Reporter
-feature
-which
-has
-a
-"
-learn
-more
-"
-button
-text
-for
-navigating
-to
-a
-SUMO
-link
-to
-learn
-more
-about
-reporting
-a
-broken
-site
-.
-%
-1
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
-.
--
--
->
-<
-string
-name
-=
-"
-webcompat_reporter_description_2
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-%
-1
-s
--
-.
-<
-/
-string
->
-<
-!
--
--
-The
 button
 text
 for
@@ -23416,55 +23312,6 @@ user
 wants
 to
 delete
-the
-selected
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_folder_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
 multiple
 items
 .
@@ -23480,75 +23327,6 @@ bookmark_delete_folders_confirmation_dialog
 "
 >
 ?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
-multiple
-items
-including
-folders
-.
-%
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
-.
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_multiple_folders_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-%
-s
-.
 <
 /
 string
@@ -23946,44 +23724,6 @@ string
 !
 -
 -
-Bookmark
-overflow
-menu
-save
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_menu_save_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
 Label
 for
 button
@@ -24247,44 +23987,6 @@ string
 -
 -
 Bookmark
-sign
-in
-button
-message
--
--
->
-<
-string
-name
-=
-"
-bookmark_sign_in_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 URL
 editing
 field
@@ -24420,44 +24122,6 @@ string
 -
 -
 Bookmark
-add
-folder
-screen
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_add_folder_fragment_label
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 select
 folder
 screen
@@ -24471,44 +24135,6 @@ name
 =
 "
 bookmark_select_folder_fragment_label
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-editing
-error
-missing
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_empty_title_error
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
 "
 >
 <
@@ -24538,46 +24164,6 @@ bookmark_invalid_url_error
 "
 >
 URL
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-screen
-message
-for
-empty
-bookmarks
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmarks_empty_message
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -24621,91 +24207,6 @@ bookmark_deletion_snackbar_message
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-not
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -24811,47 +24312,6 @@ bookmark_delete_multiple_items
 :
 %
 s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-search
-all
-bookmarks
--
--
->
-<
-string
-name
-=
-"
-bookmark_search
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -28976,48 +28436,6 @@ in
 snackbar
 when
 user
-deletes
-a
-collection
--
--
->
-<
-string
-name
-=
-"
-snackbar_collection_deleted
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-snackbar
-when
-user
 closes
 a
 tab
@@ -29574,49 +28992,6 @@ tab_collection_dialog_message
 1
 s
 ?
-<
-/
-string
->
-<
-!
--
--
-Tab
-collection
-deletion
-prompt
-dialog
-option
-to
-delete
-the
-collection
--
--
->
-<
-string
-name
-=
-"
-tab_collection_dialog_positive
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
 <
 /
 string
@@ -39143,43 +38518,6 @@ string
 !
 -
 -
-Bookmark
-deletion
-confirmation
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_confirmation
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -41500,46 +40838,6 @@ name
 =
 "
 action_bar_up_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-privacy
-content
-close
-button
--
--
->
-<
-string
-name
-=
-"
-privacy_content_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
 "
 >
 <
@@ -50654,50 +49952,6 @@ name
 =
 "
 setup_checklist_task_explore_extensions
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-title
-of
-the
-search
-widget
-task
-for
-the
-setup
-checklist
--
--
->
-<
-string
-name
-=
-"
-setup_checklist_task_search_widget
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
