--- a/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
@@ -943,6 +943,54 @@ string
 -
 -
 The
+supplementary
+text
+displayed
+on
+the
+synced
+tabs
+page
+when
+the
+user
+is
+not
+logged
+into
+an
+account
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tab_manager_empty_synced_tabs_page_description
+"
+>
+Za
+upravljanje
+sinhroniziranih
+zavihkov
+z
+vseh
+naprav
+se
+prijavite
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
 action
 text
 displayed
@@ -1352,6 +1400,78 @@ mestih
 %
 2
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+of
+private
+browsing
+mode
+displayed
+to
+users
+on
+the
+homepage
+when
+they
+enable
+private
+mode
+.
+%
+1
+s
+is
+the
+name
+of
+the
+app
+(
+for
+example
+"
+Firefox
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+felt_privacy_info_card_subtitle_3
+"
+>
+Ko
+zaprete
+vse
+zasebne
+zavihke
+%
+1
+s
+izbri
+e
+pi
+kotke
+zgodovino
+in
+podatke
+o
+spletnih
+mestih
+.
 <
 /
 string
@@ -5110,55 +5230,6 @@ s
 za
 privzeti
 brskalnik
-<
-/
-string
->
-<
-!
--
--
-Label
-text
-within
-the
-set
-as
-default
-banner
--
--
->
-<
-string
-name
-=
-"
-browser_menu_default_banner_subtitle
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Vzame
-vam
-sekundo
-.
-Kadarkoli
-lahko
-spremenite
-.
 <
 /
 string
@@ -9422,78 +9493,6 @@ na
 brskalnik
 ve
 ljudem
-.
-<
-/
-string
->
-<
-!
--
--
-Marketing
-onboarding
-page
-opt
--
-in
-checkbox
-.
-'
-Mozilla
-'
-is
-intentionally
-hardcoded
-.
--
--
->
-<
-string
-name
-=
-"
-onboarding_marketing_opt_in_checkbox
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Delite
-minimalne
-podatke
-z
-Mozillinimi
-tehnolo
-kimi
-partnerji
-za
-tr
-enje
-.
-Ti
-podatki
-se
-nikoli
-ne
-prodajajo
-ali
-uporabljajo
-za
-prikaz
-oglasov
 .
 <
 /
@@ -26880,117 +26879,6 @@ example
 Firefox
 "
 )
-.
--
--
->
-<
-string
-name
-=
-"
-webcompat_reporter_description_2
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Va
-e
-poro
-ilo
-nam
-bo
-pomagalo
-razumeti
-in
-odpraviti
-te
-ave
-v
-%
-1
-su
-s
-imer
-ga
-bomo
-izbolj
-ali
-za
-vse
-uporabnike
-.
-Ve
-o
-tem
-<
-/
-string
->
-<
-!
--
--
-The
-description
-of
-the
-Web
-Compat
-Reporter
-feature
-which
-has
-a
-"
-learn
-more
-"
-button
-text
-for
-navigating
-to
-a
-SUMO
-link
-to
-learn
-more
-about
-reporting
-a
-broken
-site
-.
-%
-1
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
 and
 %
 2
@@ -28882,64 +28770,6 @@ user
 wants
 to
 delete
-the
-selected
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_folder_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Ali
-ste
-prepri
-ani
-da
-elite
-zbrisati
-to
-mapo
-?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
 multiple
 items
 .
@@ -28964,79 +28794,6 @@ izbrisati
 izbrane
 predmete
 ?
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-message
-for
-a
-dialog
-confirming
-if
-the
-user
-wants
-to
-delete
-multiple
-items
-including
-folders
-.
-%
-s
-is
-the
-name
-of
-the
-app
-(
-for
-example
-"
-Firefox
-"
-)
-.
--
--
->
-<
-string
-name
-=
-"
-bookmark_delete_multiple_folders_confirmation_dialog
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-%
-s
-bo
-izbrisal
-izbrane
-predmete
-.
 <
 /
 string
@@ -29608,45 +29365,6 @@ string
 !
 -
 -
-Bookmark
-overflow
-menu
-save
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_menu_save_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Shrani
-<
-/
-string
->
-<
-!
--
--
 Accessibility
 label
 for
@@ -29964,50 +29682,6 @@ string
 -
 -
 Bookmark
-sign
-in
-button
-message
--
--
->
-<
-string
-name
-=
-"
-bookmark_sign_in_button
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Prijavite
-se
-za
-ogled
-sinhroniziranih
-zaznamkov
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 URL
 editing
 field
@@ -30148,46 +29822,6 @@ string
 -
 -
 Bookmark
-add
-folder
-screen
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_add_folder_fragment_label
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Dodaj
-mapo
-<
-/
-string
->
-<
-!
--
--
-Bookmark
 select
 folder
 screen
@@ -30217,47 +29851,6 @@ Bookmark
 editing
 error
 missing
-title
--
--
->
-<
-string
-name
-=
-"
-bookmark_empty_title_error
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Mora
-imeti
-naslov
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-editing
-error
-missing
 or
 improper
 URL
@@ -30274,48 +29867,6 @@ bookmark_invalid_url_error
 >
 Neveljaven
 URL
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-screen
-message
-for
-empty
-bookmarks
-folder
--
--
->
-<
-string
-name
-=
-"
-bookmarks_empty_message
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Ni
-zaznamkov
 <
 /
 string
@@ -30360,96 +29911,6 @@ Izbrisan
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-not
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Zaznamki
-izbrisani
-<
-/
-string
->
-<
-!
--
--
-Bookmark
-snackbar
-message
-on
-deleting
-multiple
-bookmarks
-including
-folders
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_multiple_snackbar_message_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Brisanje
-izbranih
-map
 <
 /
 string
@@ -30559,50 +30020,6 @@ predmeti
 :
 %
 s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-search
-all
-bookmarks
--
--
->
-<
-string
-name
-=
-"
-bookmark_search
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Vnesite
-iskalni
-niz
 <
 /
 string
@@ -35317,50 +34734,6 @@ in
 snackbar
 when
 user
-deletes
-a
-collection
--
--
->
-<
-string
-name
-=
-"
-snackbar_collection_deleted
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Zbirka
-izbrisana
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-snackbar
-when
-user
 closes
 a
 tab
@@ -36004,51 +35377,6 @@ izbrisati
 1
 s
 ?
-<
-/
-string
->
-<
-!
--
--
-Tab
-collection
-deletion
-prompt
-dialog
-option
-to
-delete
-the
-collection
--
--
->
-<
-string
-name
-=
-"
-tab_collection_dialog_positive
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Izbri
-i
 <
 /
 string
@@ -48528,52 +47856,6 @@ string
 !
 -
 -
-Bookmark
-deletion
-confirmation
--
--
->
-<
-string
-name
-=
-"
-bookmark_deletion_confirmation
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Ali
-ste
-prepri
-ani
-da
-elite
-izbrisati
-ta
-zaznamek
-?
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -51252,47 +50534,6 @@ action_bar_up_description
 >
 Pojdi
 gor
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-privacy
-content
-close
-button
--
--
->
-<
-string
-name
-=
-"
-privacy_content_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-143
-"
->
-Zapri
 <
 /
 string
@@ -62856,55 +62097,6 @@ Razi
 i
 raz
 iritve
-<
-/
-string
->
-<
-!
--
--
-The
-title
-of
-the
-search
-widget
-task
-for
-the
-setup
-checklist
--
--
->
-<
-string
-name
-=
-"
-setup_checklist_task_search_widget
-"
-moz
-:
-removedIn
-=
-"
-143
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Namestite
-pripomo
-ek
-za
-iskanje
 <
 /
 string
