Bug 1994288 - modify LNA prompt text from Allow <website> to access apps and services.. to <website> wants access apps and services.. r=emz,fluent-reviewers,bolsson
Updating prompt test based on latest discussion with UX team -> https://docs.google.com/document/d/16d8QKuV6l50s03miZ2OqteGNYtpR9E842MUPSeBfXRk/edit?tab=t.0

Differential Revision: https://phabricator.services.mozilla.com/D268605

UltraBlame original commit: 1666e4b29cdff9de604a0f3c074ae6a05a5a2b21

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -1882,11 +1882,11 @@ the
 website
 localhost
 .
-allowWithSite
+allowWithSite2
 =
-Allow
 %
 S
+wants
 to
 access
 other
@@ -1896,7 +1896,7 @@ services
 on
 this
 device
-?
+.
 localhost
 .
 remember2
@@ -1950,11 +1950,11 @@ the
 website
 localNetwork
 .
-allowWithSite
+allowWithSite2
 =
-Allow
 %
 S
+wants
 to
 access
 apps
@@ -1967,7 +1967,7 @@ to
 your
 local
 network
-?
+.
 localNetwork
 .
 remember2
