Bug 1995403 - Apply translated script direction to <table> r=translations-reviewers,gregtatum
This patch adds some special-case logic that ensures `<table>`
elements and relevant childen are flipped to the target script
direction when translating between LTR/RTL pages.

Differential Revision: https://phabricator.services.mozilla.com/D269294

UltraBlame original commit: 37ee38708c0d58a1787c4e11c2a7d964e7074e62

--- a/toolkit/components/translations/tests/browser/browser.toml
+++ b/toolkit/components/translations/tests/browser/browser.toml
@@ -482,3 +482,10 @@ browser_translations_translation_document_mutations
 js
 "
 ]
+[
+"
+browser_translations_translation_document_script_direction
+.
+js
+"
+]
